updated colors more

--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/tenor.gif">
-            <img class="img-fluid" src="img/portfolio/thumbnails/tenor.gif" alt="">
+          <a class="portfolio-box" href="https://lobo89x.github.io/Word-Guess-Game/">
+            <img style="width: 100%;" class="img-fluid" src="img/portfolio/thumbnails/Tardis_Resized.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                jquery
               </div>
               <div class="project-name">
-                Project Name
+                Word Guess
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/giphy_TEST.gif" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -207,13 +207,13 @@
     </div>
   </section>
 
-  <!-- Call to Action Section -->
+  <!-- Call to Action Section
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
