--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
-  <link href="css/creative.min.css" rel="stylesheet">
+  <link href="css/creative.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Alexander Lee | Fullstack Web Developer</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -58,11 +58,11 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 class="text-uppercase text-white font-weight-bold"> &#8226; Front End Web Developer &#8226; <br> &#8226; Back End Web Developer &#8226; <br> &#8226;  Tutor &#8226; </h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+          <p class="text-white-75 font-weight-light mb-5"></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -76,7 +76,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">We've got what you need!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+          <p class="text-white-50 mb-4">Full-Stack Web Developer with 10  years of experience in Information technology and penchant for learning new technologies and skills.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
         </div>
       </div>
@@ -139,8 +139,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/giphy_TEST.gif" alt="">
+          <a class="portfolio-box" href="https://lobo89x.github.io/giffy/">
+            <img class="img-fluid" style="max-height: 50% !important;" src="img/portfolio/thumbnails/Capture.JPG" alt=""> 
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -152,53 +152,53 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+          <a class="portfolio-box" href="https://photosbylee.herokuapp.com/">
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                React, Google drive,
               </div>
               <div class="project-name">
-                Project Name
+                Photos By Lee
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="https://lee-tutoring-ff20dd47b410.herokuapp.com/" style="background-color: bisque; max-height: 307px !important;">
+            <img class="" src="img/portfolio/thumbnails/nyansopo.99296673768b5cffa230.jpg"  style="border-radius: 50%; margin-left: 20%; margin-right: 25%;  max-height: 307px !important;" >
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                React site for my tutoring business
               </div>
               <div class="project-name">
-                Project Name
+                Tutoring by Lee
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+          <a class="portfolio-box" href="https://lee-matrimony-mobile.herokuapp.com/">
+            <img class="img-fluid" src="img/portfolio/thumbnails/lee-matimony.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                React
               </div>
               <div class="project-name">
-                Project Name
+                Lee Matrimony - Mobile
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+          <a class="portfolio-box" href="https://numbernauts-f184cffb6585.herokuapp.com/">
+            <img class="img-fluid" src="img/portfolio/thumbnails/numbernauts.png" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Category
+                React, SocketIO, MongoDB
               </div>
               <div class="project-name">
-                Project Name
+                Numbernaughts
               </div>
             </div>
           </a>
@@ -206,14 +206,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Call to Action Section
-  <section class="page-section bg-dark text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
-    </div>
-  </section> -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
@@ -222,19 +214,22 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p class="text-muted mb-5">Looking for a web dev with experience on an international team? Give me a call or send an email and I will get back to you as soon as possible!</p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
+          <div>+1 (770) 714-6805</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <a class="d-block" href="mailto:contact@yourwebsite.com">ahlee1026@gmail.com</a>
         </div>
+      </div>
+      <div class="row justify-content-center">
+        <a class="btn btn-light btn-xl js-scroll-trigger" href="./img/portfolio/ALEX_LEE_III_FrontendDev_XXIII.pdf">Current Reume</a>
       </div>
     </div>
   </section>
@@ -242,7 +237,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; 2023 - Web Dev by Lee</div>
     </div>
   </footer>
 
@@ -255,7 +250,7 @@
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
+  <!-- <script src="js/creative.min.js"></script> -->
 
 </body>
 
